--- a/www/templates/tab-scan.html
+++ b/www/templates/tab-scan.html
@@ -2,5 +2,8 @@
     <ion-content class="has-subheader padding">
         <a class="button button-positive button-block button-outline icon-left ion-qr-scanner" ng-click="scan()">Scan</a> 
         {{error || barcodeData}}
+
+		{{currProd}}
+
     </ion-content>
 </ion-view>
